--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,19 @@
     <title>무럭: 세상에 없던 무인매장 솔루션</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DBR0DM1YT0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-DBR0DM1YT0');
+    </script>
   </head>
   <body>
     <div id="root"></div>
