--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,23 @@
     <title>무럭: 세상에 없던 무인매장 솔루션</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mooluck.xyz" />
+    <meta property="og:title" content="무럭: 무인매장의 새로운 솔루션" />
+    <meta
+      property="og:image"
+      content="https://soonroom.s3.ap-northeast-2.amazonaws.com/Frame+1.png"
+    />
+    <meta property="og:description" content="무인매장 원클릭 도매 발주" />
+    <meta
+      property="og:keyword"
+      content="과자 도매, 도매, 도매몰, 준인터내셔날, 도매꾹, 달달몰, 까까무까, 까까주까, 아이스도매365, 아이스크림 도매, 무인매장, 무인점포, 무인아이스크림할인점, 무인아이스크림, 현동몰, 삼봉몰"
+    />
+    <meta property="og:site_name" content="무럭" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-DBR0DM1YT0"
