--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <title>무럭: 세상에 없던 무인매장 솔루션</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta
+      name="naver-site-verification"
+      content="42ce95e718c1c7c82bd457bf28172efde0f0c16d"
+    />
+
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mooluck.xyz" />
     <meta property="og:title" content="무럭: 무인매장의 새로운 솔루션" />
